<!--
  ~  license-start
  ~  eu-digital-green-certificates / dgca-verifier-app-android
  ~
  ~  Copyright (C) 2021 T-Systems International GmbH and all other contributors
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~  license-end
  ~
  ~  Created by Mykhailo Nester on 4/23/21 9:53 AM
  -->

<resources>
    <string name="app_name">VerificaC19</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="scan_green_pass">VerificaC19</string>
    <string name="controlCertificate">Verifica una certificazione</string>
    <string name="welcome">Benvenuto</string>
    <string name="systemDescription">Con la scansione dei QR Code è possibile verificare la validità e l\'autenticità della Certificazione verde COVID-19. VerificaC19 permette anche il controllo dell\'EU Digital Covid Certificate emesso da altri paesi europei.</string>
    <string name="privacyPolicy"><u>Leggi la Privacy policy</u></string>
    <string name="codiceFiscale">Codice fiscale</string>
    <string name="expirationText">Data scadenza certificato</string>
    <string name="certificateValid">Certificazione valida</string>
    <string name="certificateNonValid">Certificazione non valida</string>
    <string name="certificateRevoked">Certificazione revocata</string>
    <string name="certificateNonValidYet">Certificazione non ancora valida</string>
    <string name="certificateNotDCC">Errore di lettura del QR Code, oppure non è il Certificato verde COVID-19</string>
    <string name="certificateTechnicalError">Errore tecnico, non è stato possibile effettuare la verifica</string>
    <string name="subtitle_text">Per completare la verifica è necessario confrontare i seguenti dati anagrafici con quelli di un documento d\'identità valido:</string>
    <string name="subtitle_text_notvalid">La certificazione presenta i seguenti dati anagrafici:</string>
    <string name="subtitle_text_nonvalid">Il QR Code o la chiave di firma non sono validi.</string>
    <string name="subtitle_text_notDCC">Il QR Code scansionato non corrisponde a una Certificazione verde COVID-19 o non è stato letto in modo corretto, si prega di riprovare.</string>
    <string name="subtitle_text_expired">La Certificazione è scaduta.</string>
    <string name="subtitle_text_future">La Certificazione non è ancora valida.</string>
    <string name="subtitle_text_technicalError">La Certificazione non è valida o non è stato possibile verificarla.</string>
    <string name="validation_datetime_text">Ora e data di validazione: %1$s</string>
    <string name="scanQrCertificate">Scansiona il QR Code. </string>
    <string name="scanQr">Avvia scansione </string>
    <string name="nextQR">Prossima scansione</string>
    <string name="repeatQR">Ripeti scansione</string>
    <string name="dateOfBirth">Data di nascita/Birth date</string>
    <string name="lastSyncDate">Ultimo aggiornamento dati e regole:\n%1$s</string>
    <string name="loading">Ultimo aggiornamento dati e regole:\nAggiornamento in corso...</string>
    <string name="notAvailable">N/A</string>
    <string name="updateTitle">Aggiornamento richiesto</string>
    <string name="updateMessage">Per continuare ad utilizzare l\'applicazione, scarica la nuova versione dallo store.</string>
    <string name="updateLabel">Aggiorna</string>
    <string name="noKeyAlertTitle">Impossibile scansionare</string>
    <string name="noKeyAlertMessage">L\'applicazione deve connettersi alla rete almeno una volta per essere utilizzata.</string>
    <string name="noKeyAlertMessageForDrl">Per utilizzare l\'applicazione è necessario aggiornare la lista delle Certificazione verdi COVID-19 revocate.</string>
    <string name="ok">OK</string>
    <string name="next">Avanti</string>
    <string name="back">Indietro</string>
    <string name="version"><u><b>versione %1$s</b></u></string>
    <string name="privacyTitle"></string>
    <string name="privacy">VerificaC19 è l\'app ufficiale del Ministero della Salute per la verifica di validità e autenticità delle Certificazioni Verdi Covid19. La verifica avviene scansionando il QRcode presente sulla certificazione tramite la fotocamera del dispositivo. Nessun dato letto dalla Certificazione viene memorizzato sul dispositivo con cui si effettua la verifica.
\n\nPer utilizzare l\'app è necessario fornire il consenso all\'uso della fotocamera.</string>
    <string name="label_verify_green_pass">Verifica una\n<b>Certificazione\nverde Covid-19</b></string>
    <string name="label_scan_qr_code">Scansiona il QR CODE</string>
    <string name="label_read_faq"><u><b>Leggi le domande frequenti</b></u></string>
    <string name="label_verification_location"><b><u>Quali sono i luoghi e gli eventi che la prevedono?</u></b></string>
    <string name="label_name">Nome/Name</string>
    <string name="label_close">Chiudi</string>
    <string name="label_return_home">Torna all\'inizio</string>
    <string name="label_what_can_be_done">Cosa si può fare con la certificazione verde COVID-19</string>
    <string name="label_why_qr_not_valid">Quali sono i motivi di non validità?</string>
    <string name="label_when_qr_valid">Quali sono i tempi di inizio validità?</string>
    <string name="label_which_qr_scan">Quale QR Code scansionare?</string>
    <string name="label_scan_error_meaning">Cosa significa errore di lettura?</string>
    <string name="label_scan_times_needed">Quante volte devo riprovare a scansionare</string>
    <string name="label_validation_timestamp">Ora e data di validazione: %1$s</string>
    <string name="settings_title">Impostazioni</string>
    <string name="preferences_title">Preferenze</string>
    <string name="info_title">Informazioni</string>
    <string name="faq_card_title">Domande frequenti</string>
    <string name="privacy_card_title">Rispetto della privacy</string>
    <string name="label_totem_mode">Modalità automatica</string>
    <string name="label_scan_mode">Tipologia verifica</string>
    <string name="label_scan_mode_ver">Tipologia di verifica</string>
    <string name="scan_mode_3G_header">Verifica Base</string>
    <string name="scan_mode_2G_header">Verifica Rafforzata</string>
    <string name="title_scan_mode_booster">Verifica Booster</string>
    <string name="scan_mode_3G">Vaccinazione/Guarigione/Tampone</string>
    <string name="scan_mode_2G">Vaccinazione/Guarigione</string>
    <string name="label_scan_mode_boost">Richiamo/ciclo completo+tampone</string>
    <string name="label_choose_scan_mode">Scegli tipologia di verifica</string>
    <string name="label_no_scan_mode_chosen">Per procedere alla scansione selezionare una delle due tipologie di verifica della Certificazione verde Covid-19: BASE o RAFFORZATA.
\nTipologia BASE: la app considera valide le certificazioni verdi generate da vaccinazione, da guarigione, da tampone. Viene utilizzata per l\'accesso ai luoghi di lavoro, mezzi di trasporto pubblico o privato di linea, impianti sciistici chiusi, strutture ricettive, strutture sanitarie, attività sportive e culturali al chiuso, sagre e fiere, ecc .
\nTipologia RAFFORZATA: la app considera valide solo le certificazioni verdi generate da vaccinazione o da guarigione. Viene utilizzata per accedere a spettacoli, eventi sportivi, ristorazione al chiuso, feste e discoteche, cerimonie pubbliche, ecc. \n

\nIndicazioni di dettaglio sulle attività consentite senza/con green pass BASE e RAFFORZATO (link https://www.governo.it/sites/governo.it/files/documenti/documenti/Notizie-allegati/tabella_attivita_consentite.pdf)</string>
    <string name="label_alert_dialog_option">%1$s (%2$s)</string>
    <string name="label_verification_scan_mode">%1$s: %2$s</string>
    <string name="label_download">Scarica Ora</string>
    <string name="exit_download">Esci</string>
    <string name="after_download">Più tardi</string>
    <string name="resume_download">Riprendi</string>
    <string name="updatingRevokedPass">È in corso l\'aggiornamento della lista delle Certificazioni verdi COVID-19 revocate.</string>
    <string name="incompleteDownload">L\'aggiornamento della lista delle Certificazione verdi COVID-19 revocate è incompleto. Assicurati di essere connesso a Internet e clicca per continuare.</string>
    <string name="titleDownloadAlert">Aggiornamento lista Certificazioni revocate da %1$.2fMb.</string>
    <string name="label_download_alert_complete">È necessario aggiornare la lista delle Certificazione verdi COVID-19 revocate per un totale di %1$.2fMB.</string>
    <string name="label_download_alert_simple">È necessario aggiornare la lista delle Certificazione verdi COVID-19 revocate.</string>
    <string name="label_drl_download_in_progress">L\'aggiornamento della lista delle Certificazione verdi COVID-19 revocate è incompleto. Assicurati di essere connesso a Internet e clicca per continuare.</string>
    <string name="messageDownloadAlert">È necessario aggiornare la lista delle Certificazione verdi COVID-19 revocate, per un totale di %1$.2fMB. Controlla il tuo piano dati oppure connettiti a una rete wi-fi prima di procedere. Il tempo di aggiornamento dipende dalla velocità di connessione e dal tipo di device in uso.La lista verrà aggiornata ogni 24 ore.</string>
    <string name="messageDownloadStarted">È in corso l\'aggiornamento della lista delle Certificazioni verdi COVID-19 revocate. Attendere la fine del download per procedere con le scansioni.</string>
    <string name="chunk_count">Pacchetto %1$d su %2$d</string>
    <string name="chunk_size">%1$.2f Mb su %2$.2f Mb</string>
    <string name="no_internet_title">Connessione internet assente</string>
    <string name="no_internet_message">Connessione internet assente. Assicurati di essere connesso alla rete e riprova.</string>
    <string name="ok_label">OK</string>
    <string name="certificateValidTestNeeded">Cartificazione valida richiesto tampone</string>
</resources>
